--- a/country/Hong_Kong-3.html
+++ b/country/Hong_Kong-3.html
@@ -13,7 +13,7 @@
     <link href="./../fancybox/jquery.fancybox.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="./../css/post.css">
-    <title>Alexei's Postcrads - Iceland</title>
+    <title>Alexei's Postcrads - Hong Kong</title>
 
 
 </head>
@@ -107,31 +107,42 @@
             </nav>
         </div>
         <div class="col-md-9 col-lg-10 content-container">
-           <h1>Iceland</h1>
+           <h1>Hong Kong</h1>
            <div class="row">
+            
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/iceland/IS-18858.jpg" data-caption="Postcard IS-18858">
-                    <img class="img-fluid w-100" src="./../collect/iceland/IS-18858.jpg" alt="Postcard IS-18858">
-                    <div class="bottom-left">IS-18858</div>
+                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-543119.jpg" data-caption="Postcard HK-543119">
+                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-543119.jpg" alt="Postcard HK-543119">
+                    <div class="bottom-left">HK-543119</div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/iceland/IS-22002.jpg" data-caption="Postcard IS-22002">
-                    <img class="img-fluid w-100" src="./../collect/iceland/IS-22002.jpg" alt="Postcard IS-22002">
-                    <div class="bottom-left">IS-22002</div>
+                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-558903.jpg" data-caption="Postcard HK-558903">
+                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-558903.jpg" alt="Postcard HK-558903">
+                    <div class="bottom-left">HK-558903</div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/iceland/IS-23810.jpg" data-caption="Postcard IS-23810">
-                    <img class="img-fluid w-100" src="./../collect/iceland/IS-23810.jpg" alt="Postcard IS-23810">
-                    <div class="bottom-left">IS-23810</div>
+                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-615435.jpg" data-caption="Postcard HK-615435">
+                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-615435.jpg" alt="Postcard HK-615435">
+                    <div class="bottom-left">HK-615435</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-624406.jpg" data-caption="Postcard HK-624406">
+                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-624406.jpg" alt="Postcard HK-624406">
+                    <div class="bottom-left">HK-624406</div>
                 </a>
             </div>
         </div>
         <nav style="padding-left: 10px; padding-top: 10px;">
           <ul class="pagination">
-             <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
-         </ul>
+            <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
+            <li class="page-item"><a class="page-link" href="./Hong_Kong-2.html">Previous</a></li>
+            <li class="page-item"><a class="page-link" href="./Hong_Kong.html">1</a></li>
+            <li class="page-item"><a class="page-link" href="./Hong_Kong-2.html">2</a></li>
+            <li class="page-item"><a class="page-link" href="./Hong_Kong-3.html"><b>3</b></a></li>
+          </ul>
         </nav>
     </div>
 </div>
