--- a/country/Latvia.html
+++ b/country/Latvia.html
@@ -13,7 +13,7 @@
     <link href="./../fancybox/jquery.fancybox.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="./../css/post.css">
-    <title>Alexei's Postcrads - Iceland</title>
+    <title>Alexei's Postcrads - Latvia</title>
 
 
 </head>
@@ -107,33 +107,99 @@
             </nav>
         </div>
         <div class="col-md-9 col-lg-10 content-container">
-           <h1>Iceland</h1>
+           <h1>Latvia</h1>
            <div class="row">
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/iceland/IS-18858.jpg" data-caption="Postcard IS-18858">
-                    <img class="img-fluid w-100" src="./../collect/iceland/IS-18858.jpg" alt="Postcard IS-18858">
-                    <div class="bottom-left">IS-18858</div>
+                <a data-fancybox="gallery" href="./../collect/latvia/LV-72476.jpg" data-caption="Postcard LV-72476">
+                    <img class="img-fluid w-100" src="./../collect/latvia/LV-72476.jpg" alt="Postcard LV-72476">
+                    <div class="bottom-left">LV-72476</div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/iceland/IS-22002.jpg" data-caption="Postcard IS-22002">
-                    <img class="img-fluid w-100" src="./../collect/iceland/IS-22002.jpg" alt="Postcard IS-22002">
-                    <div class="bottom-left">IS-22002</div>
+                <a data-fancybox="gallery" href="./../collect/latvia/LV-79034.jpg" data-caption="Postcard LV-79034">
+                    <img class="img-fluid w-100" src="./../collect/latvia/LV-79034.jpg" alt="Postcard LV-79034">
+                    <div class="bottom-left">LV-79034</div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/iceland/IS-23810.jpg" data-caption="Postcard IS-23810">
-                    <img class="img-fluid w-100" src="./../collect/iceland/IS-23810.jpg" alt="Postcard IS-23810">
-                    <div class="bottom-left">IS-23810</div>
+                <a data-fancybox="gallery" href="./../collect/latvia/LV-92021.jpg" data-caption="Postcard LV-92021">
+                    <img class="img-fluid w-100" src="./../collect/latvia/LV-92021.jpg" alt="Postcard LV-92021">
+                    <div class="bottom-left">LV-92021</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/latvia/LV-140834.jpg" data-caption="Postcard LV-140834">
+                    <img class="img-fluid w-100" src="./../collect/latvia/LV-140834.jpg" alt="Postcard LV-140834">
+                    <div class="bottom-left">LV-140834</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/latvia/LV-165922.jpg" data-caption="Postcard LV-165922">
+                    <img class="img-fluid w-100" src="./../collect/latvia/LV-165922.jpg" alt="Postcard LV-165922">
+                    <div class="bottom-left">LV-165922</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/latvia/LV-166496.jpg" data-caption="Postcard LV-166496">
+                    <img class="img-fluid w-100" src="./../collect/latvia/LV-166496.jpg" alt="Postcard LV-166496">
+                    <div class="bottom-left">LV-166496</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/latvia/LV-182041.jpg" data-caption="Postcard LV-182041">
+                    <img class="img-fluid w-100" src="./../collect/latvia/LV-182041.jpg" alt="Postcard LV-182041">
+                    <div class="bottom-left">LV-182041</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/latvia/LV-265278.jpg" data-caption="Postcard LV-265278">
+                    <img class="img-fluid w-100" src="./../collect/latvia/LV-265278.jpg" alt="Postcard LV-265278">
+                    <div class="bottom-left">LV-265278</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/latvia/LV-272886.jpg" data-caption="Postcard LV-272886">
+                    <img class="img-fluid w-100" src="./../collect/latvia/LV-272886.jpg" alt="Postcard LV-272886">
+                    <div class="bottom-left">LV-272886</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/latvia/LV-290083.jpg" data-caption="Postcard LV-290083">
+                    <img class="img-fluid w-100" src="./../collect/latvia/LV-290083.jpg" alt="Postcard LV-290083">
+                    <div class="bottom-left">LV-290083</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/latvia/LV-303719.jpg" data-caption="Postcard LV-303719">
+                    <img class="img-fluid w-100" src="./../collect/latvia/LV-303719.jpg" alt="Postcard LV-303719">
+                    <div class="bottom-left">LV-303719</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/latvia/LV-313981.jpg" data-caption="Postcard LV-313981">
+                    <img class="img-fluid w-100" src="./../collect/latvia/LV-313981.jpg" alt="Postcard LV-313981">
+                    <div class="bottom-left">LV-313981</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/latvia/LV-316345.jpg" data-caption="Postcard LV-316345">
+                    <img class="img-fluid w-100" src="./../collect/latvia/LV-316345.jpg" alt="Postcard LV-316345">
+                    <div class="bottom-left">LV-316345</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/latvia/LV-340641.jpg" data-caption="Postcard LV-340641">
+                    <img class="img-fluid w-100" src="./../collect/latvia/LV-340641.jpg" alt="Postcard LV-340641">
+                    <div class="bottom-left">LV-340641</div>
                 </a>
             </div>
         </div>
         <nav style="padding-left: 10px; padding-top: 10px;">
           <ul class="pagination">
-             <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
-         </ul>
-        </nav>
-    </div>
+           <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
+       </ul>
+   </nav>
+</div>
 </div>
 </div>
 
