--- a/country/Malaysia.html
+++ b/country/Malaysia.html
@@ -13,7 +13,7 @@
     <link href="./../fancybox/jquery.fancybox.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="./../css/post.css">
-    <title>Alexei's Postcrads - Iceland</title>
+    <title>Alexei's Postcrads - Malaysia</title>
 
 
 </head>
@@ -107,33 +107,177 @@
             </nav>
         </div>
         <div class="col-md-9 col-lg-10 content-container">
-           <h1>Iceland</h1>
+           <h1>Malaysia</h1>
            <div class="row">
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/iceland/IS-18858.jpg" data-caption="Postcard IS-18858">
-                    <img class="img-fluid w-100" src="./../collect/iceland/IS-18858.jpg" alt="Postcard IS-18858">
-                    <div class="bottom-left">IS-18858</div>
+                <a data-fancybox="gallery" href="./../collect/malaysia/MY-79803.jpg" data-caption="Postcard MY-79803">
+                    <img class="img-fluid w-100" src="./../collect/malaysia/MY-79803.jpg" alt="Postcard MY-79803">
+                    <div class="bottom-left">MY-79803</div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/iceland/IS-22002.jpg" data-caption="Postcard IS-22002">
-                    <img class="img-fluid w-100" src="./../collect/iceland/IS-22002.jpg" alt="Postcard IS-22002">
-                    <div class="bottom-left">IS-22002</div>
+                <a data-fancybox="gallery" href="./../collect/malaysia/MY-102632.jpg" data-caption="Postcard MY-102632">
+                    <img class="img-fluid w-100" src="./../collect/malaysia/MY-102632.jpg" alt="Postcard MY-102632">
+                    <div class="bottom-left">MY-102632</div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/iceland/IS-23810.jpg" data-caption="Postcard IS-23810">
-                    <img class="img-fluid w-100" src="./../collect/iceland/IS-23810.jpg" alt="Postcard IS-23810">
-                    <div class="bottom-left">IS-23810</div>
+                <a data-fancybox="gallery" href="./../collect/malaysia/MY-107137.jpg" data-caption="Postcard MY-107137">
+                    <img class="img-fluid w-100" src="./../collect/malaysia/MY-107137.jpg" alt="Postcard MY-107137">
+                    <div class="bottom-left">MY-107137</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/malaysia/MY-117632.jpg" data-caption="Postcard MY-117632">
+                    <img class="img-fluid w-100" src="./../collect/malaysia/MY-117632.jpg" alt="Postcard MY-117632">
+                    <div class="bottom-left">MY-117632</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/malaysia/MY-155345.jpg" data-caption="Postcard MY-155345">
+                    <img class="img-fluid w-100" src="./../collect/malaysia/MY-155345.jpg" alt="Postcard MY-155345">
+                    <div class="bottom-left">MY-155345</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/malaysia/MY-172154.jpg" data-caption="Postcard MY-172154">
+                    <img class="img-fluid w-100" src="./../collect/malaysia/MY-172154.jpg" alt="Postcard MY-172154">
+                    <div class="bottom-left">MY-172154</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/malaysia/MY-229689.jpg" data-caption="Postcard MY-229689">
+                    <img class="img-fluid w-100" src="./../collect/malaysia/MY-229689.jpg" alt="Postcard MY-229689">
+                    <div class="bottom-left">MY-229689</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/malaysia/MY-248033.jpg" data-caption="Postcard MY-248033">
+                    <img class="img-fluid w-100" src="./../collect/malaysia/MY-248033.jpg" alt="Postcard MY-248033">
+                    <div class="bottom-left">MY-248033</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/malaysia/MY-252749.jpg" data-caption="Postcard MY-252749">
+                    <img class="img-fluid w-100" src="./../collect/malaysia/MY-252749.jpg" alt="Postcard MY-252749">
+                    <div class="bottom-left">MY-252749</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/malaysia/MY-284976.jpg" data-caption="Postcard MY-284976">
+                    <img class="img-fluid w-100" src="./../collect/malaysia/MY-284976.jpg" alt="Postcard MY-284976">
+                    <div class="bottom-left">MY-284976</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/malaysia/MY-312640.jpg" data-caption="Postcard MY-312640">
+                    <img class="img-fluid w-100" src="./../collect/malaysia/MY-312640.jpg" alt="Postcard MY-312640">
+                    <div class="bottom-left">MY-312640</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/malaysia/MY-320290.jpg" data-caption="Postcard MY-320290">
+                    <img class="img-fluid w-100" src="./../collect/malaysia/MY-320290.jpg" alt="Postcard MY-320290">
+                    <div class="bottom-left">MY-320290</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/malaysia/MY-323329.jpg" data-caption="Postcard MY-323329">
+                    <img class="img-fluid w-100" src="./../collect/malaysia/MY-323329.jpg" alt="Postcard MY-323329">
+                    <div class="bottom-left">MY-323329</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/malaysia/MY-329654.jpg" data-caption="Postcard MY-329654">
+                    <img class="img-fluid w-100" src="./../collect/malaysia/MY-329654.jpg" alt="Postcard MY-329654">
+                    <div class="bottom-left">MY-329654</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/malaysia/MY-332445.jpg" data-caption="Postcard MY-332445">
+                    <img class="img-fluid w-100" src="./../collect/malaysia/MY-332445.jpg" alt="Postcard MY-332445">
+                    <div class="bottom-left">MY-332445</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/malaysia/MY-333982.jpg" data-caption="Postcard MY-333982">
+                    <img class="img-fluid w-100" src="./../collect/malaysia/MY-333982.jpg" alt="Postcard MY-333982">
+                    <div class="bottom-left">MY-333982</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/malaysia/MY-359783.jpg" data-caption="Postcard MY-359783">
+                    <img class="img-fluid w-100" src="./../collect/malaysia/MY-359783.jpg" alt="Postcard MY-359783">
+                    <div class="bottom-left">MY-359783</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/malaysia/MY-378054.jpg" data-caption="Postcard MY-378054">
+                    <img class="img-fluid w-100" src="./../collect/malaysia/MY-378054.jpg" alt="Postcard MY-378054">
+                    <div class="bottom-left">MY-378054</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/malaysia/MY-379590.jpg" data-caption="Postcard MY-379590">
+                    <img class="img-fluid w-100" src="./../collect/malaysia/MY-379590.jpg" alt="Postcard MY-379590">
+                    <div class="bottom-left">MY-379590</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/malaysia/MY-400779.jpg" data-caption="Postcard MY-400779">
+                    <img class="img-fluid w-100" src="./../collect/malaysia/MY-400779.jpg" alt="Postcard MY-400779">
+                    <div class="bottom-left">MY-400779</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/malaysia/MY-401224.jpg" data-caption="Postcard MY-401224">
+                    <img class="img-fluid w-100" src="./../collect/malaysia/MY-401224.jpg" alt="Postcard MY-401224">
+                    <div class="bottom-left">MY-401224</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/malaysia/MY-407084.jpg" data-caption="Postcard MY-407084">
+                    <img class="img-fluid w-100" src="./../collect/malaysia/MY-407084.jpg" alt="Postcard MY-407084">
+                    <div class="bottom-left">MY-407084</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/malaysia/MY-407899.jpg" data-caption="Postcard MY-407899">
+                    <img class="img-fluid w-100" src="./../collect/malaysia/MY-407899.jpg" alt="Postcard MY-407899">
+                    <div class="bottom-left">MY-407899</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/malaysia/MY-414527.jpg" data-caption="Postcard MY-414527">
+                    <img class="img-fluid w-100" src="./../collect/malaysia/MY-414527.jpg" alt="Postcard MY-414527">
+                    <div class="bottom-left">MY-414527</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/malaysia/MY-439523.jpg" data-caption="Postcard MY-439523">
+                    <img class="img-fluid w-100" src="./../collect/malaysia/MY-439523.jpg" alt="Postcard MY-439523">
+                    <div class="bottom-left">MY-439523</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/malaysia/MY-469565.jpg" data-caption="Postcard MY-469565">
+                    <img class="img-fluid w-100" src="./../collect/malaysia/MY-469565.jpg" alt="Postcard MY-469565">
+                    <div class="bottom-left">MY-469565</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/malaysia/MY-473414.jpg" data-caption="Postcard MY-473414">
+                    <img class="img-fluid w-100" src="./../collect/malaysia/MY-473414.jpg" alt="Postcard MY-473414">
+                    <div class="bottom-left">MY-473414</div>
                 </a>
             </div>
         </div>
         <nav style="padding-left: 10px; padding-top: 10px;">
           <ul class="pagination">
-             <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
-         </ul>
-        </nav>
-    </div>
+           <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
+       </ul>
+   </nav>
+</div>
 </div>
 </div>
 
