--- a/country/Moldova.html
+++ b/country/Moldova.html
@@ -13,7 +13,7 @@
     <link href="./../fancybox/jquery.fancybox.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="./../css/post.css">
-    <title>Alexei's Postcrads - Iceland</title>
+    <title>Alexei's Postcrads - Moldova</title>
 
 
 </head>
@@ -107,33 +107,45 @@
             </nav>
         </div>
         <div class="col-md-9 col-lg-10 content-container">
-           <h1>Iceland</h1>
+           <h1>Moldova</h1>
            <div class="row">
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/iceland/IS-18858.jpg" data-caption="Postcard IS-18858">
-                    <img class="img-fluid w-100" src="./../collect/iceland/IS-18858.jpg" alt="Postcard IS-18858">
-                    <div class="bottom-left">IS-18858</div>
+                <a data-fancybox="gallery" href="./../collect/moldova/MD-13156.jpg" data-caption="Postcard MD-13156">
+                    <img class="img-fluid w-100" src="./../collect/moldova/MD-13156.jpg" alt="Postcard MD-13156">
+                    <div class="bottom-left">MD-13156</div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/iceland/IS-22002.jpg" data-caption="Postcard IS-22002">
-                    <img class="img-fluid w-100" src="./../collect/iceland/IS-22002.jpg" alt="Postcard IS-22002">
-                    <div class="bottom-left">IS-22002</div>
+                <a data-fancybox="gallery" href="./../collect/moldova/MD-26609.jpg" data-caption="Postcard MD-26609">
+                    <img class="img-fluid w-100" src="./../collect/moldova/MD-26609.jpg" alt="Postcard MD-26609">
+                    <div class="bottom-left">MD-26609</div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/iceland/IS-23810.jpg" data-caption="Postcard IS-23810">
-                    <img class="img-fluid w-100" src="./../collect/iceland/IS-23810.jpg" alt="Postcard IS-23810">
-                    <div class="bottom-left">IS-23810</div>
+                <a data-fancybox="gallery" href="./../collect/moldova/MD-44542.jpg" data-caption="Postcard MD-44542">
+                    <img class="img-fluid w-100" src="./../collect/moldova/MD-44542.jpg" alt="Postcard MD-44542">
+                    <div class="bottom-left">MD-44542</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/moldova/MD-49697.jpg" data-caption="Postcard MD-49697">
+                    <img class="img-fluid w-100" src="./../collect/moldova/MD-49697.jpg" alt="Postcard MD-49697">
+                    <div class="bottom-left">MD-49697</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/moldova/MD-55903.jpg" data-caption="Postcard MD-55903">
+                    <img class="img-fluid w-100" src="./../collect/moldova/MD-55903.jpg" alt="Postcard MD-55903">
+                    <div class="bottom-left">MD-55903</div>
                 </a>
             </div>
         </div>
         <nav style="padding-left: 10px; padding-top: 10px;">
           <ul class="pagination">
-             <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
-         </ul>
-        </nav>
-    </div>
+           <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
+       </ul>
+   </nav>
+</div>
 </div>
 </div>
 
