--- a/country/Norway.html
+++ b/country/Norway.html
@@ -13,7 +13,7 @@
     <link href="./../fancybox/jquery.fancybox.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="./../css/post.css">
-    <title>Alexei's Postcrads - Iceland</title>
+    <title>Alexei's Postcrads - Norway</title>
 
 
 </head>
@@ -107,33 +107,46 @@
             </nav>
         </div>
         <div class="col-md-9 col-lg-10 content-container">
-           <h1>Iceland</h1>
-           <div class="row">
+         <h1>Norway</h1>
+         <div class="row">
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/iceland/IS-18858.jpg" data-caption="Postcard IS-18858">
-                    <img class="img-fluid w-100" src="./../collect/iceland/IS-18858.jpg" alt="Postcard IS-18858">
-                    <div class="bottom-left">IS-18858</div>
+                <a data-fancybox="gallery" href="./../collect/norway/NO-80944.jpg" data-caption="Postcard NO-80944">
+                    <img class="img-fluid w-100" src="./../collect/norway/NO-80944.jpg" alt="Postcard NO-80944">
+                    <div class="bottom-left">NO-80944</div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/iceland/IS-22002.jpg" data-caption="Postcard IS-22002">
-                    <img class="img-fluid w-100" src="./../collect/iceland/IS-22002.jpg" alt="Postcard IS-22002">
-                    <div class="bottom-left">IS-22002</div>
+                <a data-fancybox="gallery" href="./../collect/norway/NO-119902.jpg" data-caption="Postcard NO-119902">
+                    <img class="img-fluid w-100" src="./../collect/norway/NO-119902.jpg" alt="Postcard NO-119902">
+                    <div class="bottom-left">NO-119902</div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/iceland/IS-23810.jpg" data-caption="Postcard IS-23810">
-                    <img class="img-fluid w-100" src="./../collect/iceland/IS-23810.jpg" alt="Postcard IS-23810">
-                    <div class="bottom-left">IS-23810</div>
+                <a data-fancybox="gallery" href="./../collect/norway/NO-121229.jpg" data-caption="Postcard NO-121229">
+                    <img class="img-fluid w-100" src="./../collect/norway/NO-121229.jpg" alt="Postcard NO-121229">
+                    <div class="bottom-left">NO-121229</div>
                 </a>
             </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/norway/NO-139327.jpg" data-caption="Postcard NO-139327">
+                    <img class="img-fluid w-100" src="./../collect/norway/NO-139327.jpg" alt="Postcard NO-139327">
+                    <div class="bottom-left">NO-139327</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/norway/NO-179624.jpg" data-caption="Postcard NO-179624">
+                    <img class="img-fluid w-100" src="./../collect/norway/NO-179624.jpg" alt="Postcard NO-179624">
+                    <div class="bottom-left">NO-179624</div>
+                </a>
+            </div>
+
         </div>
         <nav style="padding-left: 10px; padding-top: 10px;">
           <ul class="pagination">
              <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
          </ul>
-        </nav>
-    </div>
+     </nav>
+ </div>
 </div>
 </div>
 
