--- a/country/Philippines.html
+++ b/country/Philippines.html
@@ -13,7 +13,7 @@
     <link href="./../fancybox/jquery.fancybox.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="./../css/post.css">
-    <title>Alexei's Postcrads - Iceland</title>
+    <title>Alexei's Postcrads - Philippines</title>
 
 
 </head>
@@ -107,24 +107,42 @@
             </nav>
         </div>
         <div class="col-md-9 col-lg-10 content-container">
-           <h1>Iceland</h1>
-           <div class="row">
+         <h1>Philippines</h1>
+         <div class="row">
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/iceland/IS-18858.jpg" data-caption="Postcard IS-18858">
-                    <img class="img-fluid w-100" src="./../collect/iceland/IS-18858.jpg" alt="Postcard IS-18858">
-                    <div class="bottom-left">IS-18858</div>
+                <a data-fancybox="gallery" href="./../collect/philippines/PH-64310.jpg" data-caption="Postcard PH-64310">
+                    <img class="img-fluid w-100" src="./../collect/philippines/PH-64310.jpg" alt="Postcard PH-64310">
+                    <div class="bottom-left">PH-64310</div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/iceland/IS-22002.jpg" data-caption="Postcard IS-22002">
-                    <img class="img-fluid w-100" src="./../collect/iceland/IS-22002.jpg" alt="Postcard IS-22002">
-                    <div class="bottom-left">IS-22002</div>
+                <a data-fancybox="gallery" href="./../collect/philippines/PH-66025.jpg" data-caption="Postcard PH-66025">
+                    <img class="img-fluid w-100" src="./../collect/philippines/PH-66025.jpg" alt="Postcard PH-66025">
+                    <div class="bottom-left">PH-66025</div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/iceland/IS-23810.jpg" data-caption="Postcard IS-23810">
-                    <img class="img-fluid w-100" src="./../collect/iceland/IS-23810.jpg" alt="Postcard IS-23810">
-                    <div class="bottom-left">IS-23810</div>
+                <a data-fancybox="gallery" href="./../collect/philippines/PH-106184.jpg" data-caption="Postcard PH-106184">
+                    <img class="img-fluid w-100" src="./../collect/philippines/PH-106184.jpg" alt="Postcard PH-106184">
+                    <div class="bottom-left">PH-106184</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/philippines/PH-108216.jpg" data-caption="Postcard PH-108216">
+                    <img class="img-fluid w-100" src="./../collect/philippines/PH-108216.jpg" alt="Postcard PH-108216">
+                    <div class="bottom-left">PH-108216</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/philippines/PH-118461.jpg" data-caption="Postcard PH-118461">
+                    <img class="img-fluid w-100" src="./../collect/philippines/PH-118461.jpg" alt="Postcard PH-118461">
+                    <div class="bottom-left">PH-118461</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/philippines/PH-128350.jpg" data-caption="Postcard PH-128350">
+                    <img class="img-fluid w-100" src="./../collect/philippines/PH-128350.jpg" alt="Postcard PH-128350">
+                    <div class="bottom-left">PH-128350</div>
                 </a>
             </div>
         </div>
@@ -132,8 +150,8 @@
           <ul class="pagination">
              <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
          </ul>
-        </nav>
-    </div>
+     </nav>
+ </div>
 </div>
 </div>
 
