--- a/country/Serbia.html
+++ b/country/Serbia.html
@@ -13,7 +13,7 @@
     <link href="./../fancybox/jquery.fancybox.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="./../css/post.css">
-    <title>Alexei's Postcrads - Iceland</title>
+    <title>Alexei's Postcrads - Serbia</title>
 
 
 </head>
@@ -31,7 +31,7 @@
                 <div class="collapse navbar-collapse" id="navbar">
                     <!-- Вертикальное меню -->
                     
-                    <ul class="nav flex-column">
+                    <ul class="nav flex-column nav-pills">
                         <li class="nav-item"><a class="nav-link-cut" href="./Argentina.html"><img src="./../flag/ar.png" alt="Argentina">Argentina</a></li>
                         <li class="nav-item"><a class="nav-link-cut" href="./Australia.html"><img src="./../flag/au.png" alt="Australia">Australia</a></li>
                         <li class="nav-item"><a class="nav-link-cut" href="./Austria.html"><img src="./../flag/at.png" alt="Austria">Austria</a></li>
@@ -102,38 +102,38 @@
                         <li class="nav-item"><a class="nav-link-cut" href="./Ukraine.html"><img src="./../flag/ua.png" alt="Ukraine">Ukraine</a></li>
                         <li class="nav-item"><a class="nav-link-cut" href="./United_Kingdom.html"><img src="./../flag/uk.png" alt="United Kingdom">United Kingdom</a></li>
                         <li class="nav-item"><a class="nav-link-cut" href="./Uzbekistan.html"><img src="./../flag/uz.png" alt="Uzbekistan">Uzbekistan</a></li>
-                    </ul> 
+                    </ul>  
                 </div>
             </nav>
         </div>
         <div class="col-md-9 col-lg-10 content-container">
-           <h1>Iceland</h1>
+           <h1>Serbia</h1>
            <div class="row">
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/iceland/IS-18858.jpg" data-caption="Postcard IS-18858">
-                    <img class="img-fluid w-100" src="./../collect/iceland/IS-18858.jpg" alt="Postcard IS-18858">
-                    <div class="bottom-left">IS-18858</div>
+                <a data-fancybox="gallery" href="./../collect/serbia/RS-16575.jpg" data-caption="Postcard RS-16575">
+                    <img class="img-fluid w-100" src="./../collect/serbia/RS-16575.jpg" alt="Postcard RS-16575">
+                    <div class="bottom-left">RS-16575</div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/iceland/IS-22002.jpg" data-caption="Postcard IS-22002">
-                    <img class="img-fluid w-100" src="./../collect/iceland/IS-22002.jpg" alt="Postcard IS-22002">
-                    <div class="bottom-left">IS-22002</div>
+                <a data-fancybox="gallery" href="./../collect/serbia/RS-22694.jpg" data-caption="Postcard RS-22694">
+                    <img class="img-fluid w-100" src="./../collect/serbia/RS-22694.jpg" alt="Postcard RS-22694">
+                    <div class="bottom-left">RS-22694</div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/iceland/IS-23810.jpg" data-caption="Postcard IS-23810">
-                    <img class="img-fluid w-100" src="./../collect/iceland/IS-23810.jpg" alt="Postcard IS-23810">
-                    <div class="bottom-left">IS-23810</div>
+                <a data-fancybox="gallery" href="./../collect/serbia/RS-31892.jpg" data-caption="Postcard RS-31892">
+                    <img class="img-fluid w-100" src="./../collect/serbia/RS-31892.jpg" alt="Postcard RS-31892">
+                    <div class="bottom-left">RS-31892</div>
                 </a>
             </div>
         </div>
         <nav style="padding-left: 10px; padding-top: 10px;">
           <ul class="pagination">
-             <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
-         </ul>
-        </nav>
-    </div>
+           <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
+       </ul>
+   </nav>
+</div>
 </div>
 </div>
 
