--- a/country/Singapore.html
+++ b/country/Singapore.html
@@ -13,7 +13,7 @@
     <link href="./../fancybox/jquery.fancybox.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="./../css/post.css">
-    <title>Alexei's Postcrads - Iceland</title>
+    <title>Alexei's Postcrads - Singapore</title>
 
 
 </head>
@@ -107,24 +107,60 @@
             </nav>
         </div>
         <div class="col-md-9 col-lg-10 content-container">
-           <h1>Iceland</h1>
-           <div class="row">
+         <h1>Singapore</h1>
+         <div class="row">
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/iceland/IS-18858.jpg" data-caption="Postcard IS-18858">
-                    <img class="img-fluid w-100" src="./../collect/iceland/IS-18858.jpg" alt="Postcard IS-18858">
-                    <div class="bottom-left">IS-18858</div>
+                <a data-fancybox="gallery" href="./../collect/singapore/SG-145318.jpg" data-caption="Postcard SG-145318">
+                    <img class="img-fluid w-100" src="./../collect/singapore/SG-145318.jpg" alt="Postcard SG-145318">
+                    <div class="bottom-left">SG-145318</div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/iceland/IS-22002.jpg" data-caption="Postcard IS-22002">
-                    <img class="img-fluid w-100" src="./../collect/iceland/IS-22002.jpg" alt="Postcard IS-22002">
-                    <div class="bottom-left">IS-22002</div>
+                <a data-fancybox="gallery" href="./../collect/singapore/SG-158219.jpg" data-caption="Postcard SG-158219">
+                    <img class="img-fluid w-100" src="./../collect/singapore/SG-158219.jpg" alt="Postcard SG-158219">
+                    <div class="bottom-left">SG-158219</div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/iceland/IS-23810.jpg" data-caption="Postcard IS-23810">
-                    <img class="img-fluid w-100" src="./../collect/iceland/IS-23810.jpg" alt="Postcard IS-23810">
-                    <div class="bottom-left">IS-23810</div>
+                <a data-fancybox="gallery" href="./../collect/singapore/SG-161611.jpg" data-caption="Postcard SG-161611">
+                    <img class="img-fluid w-100" src="./../collect/singapore/SG-161611.jpg" alt="Postcard SG-161611">
+                    <div class="bottom-left">SG-161611</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/singapore/SG-170778.jpg" data-caption="Postcard SG-170778">
+                    <img class="img-fluid w-100" src="./../collect/singapore/SG-170778.jpg" alt="Postcard SG-170778">
+                    <div class="bottom-left">SG-170778</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/singapore/SG-192246.jpg" data-caption="Postcard SG-192246">
+                    <img class="img-fluid w-100" src="./../collect/singapore/SG-192246.jpg" alt="Postcard SG-192246">
+                    <div class="bottom-left">SG-192246</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/singapore/SG-228780.jpg" data-caption="Postcard SG-228780">
+                    <img class="img-fluid w-100" src="./../collect/singapore/SG-228780.jpg" alt="Postcard SG-228780">
+                    <div class="bottom-left">SG-228780</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/singapore/SG-252016.jpg" data-caption="Postcard SG-252016">
+                    <img class="img-fluid w-100" src="./../collect/singapore/SG-252016.jpg" alt="Postcard SG-252016">
+                    <div class="bottom-left">SG-252016</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/singapore/SG-253917.jpg" data-caption="Postcard SG-253917">
+                    <img class="img-fluid w-100" src="./../collect/singapore/SG-253917.jpg" alt="Postcard SG-253917">
+                    <div class="bottom-left">SG-253917</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/singapore/SG-286326.jpg" data-caption="Postcard SG-286326">
+                    <img class="img-fluid w-100" src="./../collect/singapore/SG-286326.jpg" alt="Postcard SG-286326">
+                    <div class="bottom-left">SG-286326</div>
                 </a>
             </div>
         </div>
@@ -132,8 +168,8 @@
           <ul class="pagination">
              <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
          </ul>
-        </nav>
-    </div>
+     </nav>
+ </div>
 </div>
 </div>
 
