--- a/country/Slovakia.html
+++ b/country/Slovakia.html
@@ -13,7 +13,7 @@
     <link href="./../fancybox/jquery.fancybox.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="./../css/post.css">
-    <title>Alexei's Postcrads - Iceland</title>
+    <title>Alexei's Postcrads - Slovakia</title>
 
 
 </head>
@@ -107,33 +107,69 @@
             </nav>
         </div>
         <div class="col-md-9 col-lg-10 content-container">
-           <h1>Iceland</h1>
+           <h1>Slovakia</h1>
            <div class="row">
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/iceland/IS-18858.jpg" data-caption="Postcard IS-18858">
-                    <img class="img-fluid w-100" src="./../collect/iceland/IS-18858.jpg" alt="Postcard IS-18858">
-                    <div class="bottom-left">IS-18858</div>
+                <a data-fancybox="gallery" href="./../collect/slovakia/SK-50435.jpg" data-caption="Postcard SK-50435">
+                    <img class="img-fluid w-100" src="./../collect/slovakia/SK-50435.jpg" alt="Postcard SK-50435">
+                    <div class="bottom-left">SK-50435</div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/iceland/IS-22002.jpg" data-caption="Postcard IS-22002">
-                    <img class="img-fluid w-100" src="./../collect/iceland/IS-22002.jpg" alt="Postcard IS-22002">
-                    <div class="bottom-left">IS-22002</div>
+                <a data-fancybox="gallery" href="./../collect/slovakia/SK-77080.jpg" data-caption="Postcard SK-77080">
+                    <img class="img-fluid w-100" src="./../collect/slovakia/SK-77080.jpg" alt="Postcard SK-77080">
+                    <div class="bottom-left">SK-77080</div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/iceland/IS-23810.jpg" data-caption="Postcard IS-23810">
-                    <img class="img-fluid w-100" src="./../collect/iceland/IS-23810.jpg" alt="Postcard IS-23810">
-                    <div class="bottom-left">IS-23810</div>
+                <a data-fancybox="gallery" href="./../collect/slovakia/SK-94342.jpg" data-caption="Postcard SK-94342">
+                    <img class="img-fluid w-100" src="./../collect/slovakia/SK-94342.jpg" alt="Postcard SK-94342">
+                    <div class="bottom-left">SK-94342</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/slovakia/SK-110868.jpg" data-caption="Postcard SK-110868">
+                    <img class="img-fluid w-100" src="./../collect/slovakia/SK-110868.jpg" alt="Postcard SK-110868">
+                    <div class="bottom-left">SK-110868</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/slovakia/SK-130458.jpg" data-caption="Postcard SK-130458">
+                    <img class="img-fluid w-100" src="./../collect/slovakia/SK-130458.jpg" alt="Postcard SK-130458">
+                    <div class="bottom-left">SK-130458</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/slovakia/SK-146180.jpg" data-caption="Postcard SK-146180">
+                    <img class="img-fluid w-100" src="./../collect/slovakia/SK-146180.jpg" alt="Postcard SK-146180">
+                    <div class="bottom-left">SK-146180</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/slovakia/SK-150730.jpg" data-caption="Postcard SK-150730">
+                    <img class="img-fluid w-100" src="./../collect/slovakia/SK-150730.jpg" alt="Postcard SK-150730">
+                    <div class="bottom-left">SK-150730</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/slovakia/SK-157703.jpg" data-caption="Postcard SK-157703">
+                    <img class="img-fluid w-100" src="./../collect/slovakia/SK-157703.jpg" alt="Postcard SK-157703">
+                    <div class="bottom-left">SK-157703</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/slovakia/SK-169857.jpg" data-caption="Postcard SK-169857">
+                    <img class="img-fluid w-100" src="./../collect/slovakia/SK-169857.jpg" alt="Postcard SK-169857">
+                    <div class="bottom-left">SK-169857</div>
                 </a>
             </div>
         </div>
         <nav style="padding-left: 10px; padding-top: 10px;">
           <ul class="pagination">
-             <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
-         </ul>
-        </nav>
-    </div>
+           <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
+       </ul>
+   </nav>
+</div>
 </div>
 </div>
 
