--- a/country/South_Africa.html
+++ b/country/South_Africa.html
@@ -13,7 +13,7 @@
     <link href="./../fancybox/jquery.fancybox.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="./../css/post.css">
-    <title>Alexei's Postcrads - Iceland</title>
+    <title>Alexei's Postcrads - South Africa</title>
 
 
 </head>
@@ -107,24 +107,54 @@
             </nav>
         </div>
         <div class="col-md-9 col-lg-10 content-container">
-           <h1>Iceland</h1>
-           <div class="row">
+         <h1>South Africa</h1>
+         <div class="row">
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/iceland/IS-18858.jpg" data-caption="Postcard IS-18858">
-                    <img class="img-fluid w-100" src="./../collect/iceland/IS-18858.jpg" alt="Postcard IS-18858">
-                    <div class="bottom-left">IS-18858</div>
+                <a data-fancybox="gallery" href="./../collect/south_afrika/ZA-80759.jpg" data-caption="Postcard ZA-80759">
+                    <img class="img-fluid w-100" src="./../collect/south_afrika/ZA-80759.jpg" alt="Postcard ZA-80759">
+                    <div class="bottom-left">ZA-80759</div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/iceland/IS-22002.jpg" data-caption="Postcard IS-22002">
-                    <img class="img-fluid w-100" src="./../collect/iceland/IS-22002.jpg" alt="Postcard IS-22002">
-                    <div class="bottom-left">IS-22002</div>
+                <a data-fancybox="gallery" href="./../collect/south_afrika/ZA-101028.jpg" data-caption="Postcard ZA-101028">
+                    <img class="img-fluid w-100" src="./../collect/south_afrika/ZA-101028.jpg" alt="Postcard ZA-101028">
+                    <div class="bottom-left">ZA-101028</div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/iceland/IS-23810.jpg" data-caption="Postcard IS-23810">
-                    <img class="img-fluid w-100" src="./../collect/iceland/IS-23810.jpg" alt="Postcard IS-23810">
-                    <div class="bottom-left">IS-23810</div>
+                <a data-fancybox="gallery" href="./../collect/south_afrika/ZA-103123.jpg" data-caption="Postcard ZA-103123">
+                    <img class="img-fluid w-100" src="./../collect/south_afrika/ZA-103123.jpg" alt="Postcard ZA-103123">
+                    <div class="bottom-left">ZA-103123</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/south_afrika/ZA-106754.jpg" data-caption="Postcard ZA-106754">
+                    <img class="img-fluid w-100" src="./../collect/south_afrika/ZA-106754.jpg" alt="Postcard ZA-106754">
+                    <div class="bottom-left">ZA-106754</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/south_afrika/ZA-121142.jpg" data-caption="Postcard ZA-121142">
+                    <img class="img-fluid w-100" src="./../collect/south_afrika/ZA-121142.jpg" alt="Postcard ZA-121142">
+                    <div class="bottom-left">ZA-121142</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/south_afrika/ZA-124647.jpg" data-caption="Postcard ZA-124647">
+                    <img class="img-fluid w-100" src="./../collect/south_afrika/ZA-124647.jpg" alt="Postcard ZA-124647">
+                    <div class="bottom-left">ZA-124647</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/south_afrika/ZA-130617.jpg" data-caption="Postcard ZA-130617">
+                    <img class="img-fluid w-100" src="./../collect/south_afrika/ZA-130617.jpg" alt="Postcard ZA-130617">
+                    <div class="bottom-left">ZA-130617</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/south_afrika/ZA-135020.jpg" data-caption="Postcard ZA-135020">
+                    <img class="img-fluid w-100" src="./../collect/south_afrika/ZA-135020.jpg" alt="Postcard ZA-135020">
+                    <div class="bottom-left">ZA-135020</div>
                 </a>
             </div>
         </div>
@@ -132,8 +162,8 @@
           <ul class="pagination">
              <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
          </ul>
-        </nav>
-    </div>
+     </nav>
+ </div>
 </div>
 </div>
 
