--- a/country/Spain.html
+++ b/country/Spain.html
@@ -13,7 +13,7 @@
     <link href="./../fancybox/jquery.fancybox.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="./../css/post.css">
-    <title>Alexei's Postcrads - Iceland</title>
+    <title>Alexei's Postcrads - Spain</title>
 
 
 </head>
@@ -107,33 +107,105 @@
             </nav>
         </div>
         <div class="col-md-9 col-lg-10 content-container">
-           <h1>Iceland</h1>
+           <h1>Spain</h1>
            <div class="row">
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/iceland/IS-18858.jpg" data-caption="Postcard IS-18858">
-                    <img class="img-fluid w-100" src="./../collect/iceland/IS-18858.jpg" alt="Postcard IS-18858">
-                    <div class="bottom-left">IS-18858</div>
+                <a data-fancybox="gallery" href="./../collect/spain/ES-130833.jpg" data-caption="Postcard ES-130833">
+                    <img class="img-fluid w-100" src="./../collect/spain/ES-130833.jpg" alt="Postcard ES-130833">
+                    <div class="bottom-left">ES-130833</div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/iceland/IS-22002.jpg" data-caption="Postcard IS-22002">
-                    <img class="img-fluid w-100" src="./../collect/iceland/IS-22002.jpg" alt="Postcard IS-22002">
-                    <div class="bottom-left">IS-22002</div>
+                <a data-fancybox="gallery" href="./../collect/spain/ES-193442.jpg" data-caption="Postcard ES-193442">
+                    <img class="img-fluid w-100" src="./../collect/spain/ES-193442.jpg" alt="Postcard ES-193442">
+                    <div class="bottom-left">ES-193442</div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/iceland/IS-23810.jpg" data-caption="Postcard IS-23810">
-                    <img class="img-fluid w-100" src="./../collect/iceland/IS-23810.jpg" alt="Postcard IS-23810">
-                    <div class="bottom-left">IS-23810</div>
+                <a data-fancybox="gallery" href="./../collect/spain/ES-262375.jpg" data-caption="Postcard ES-262375">
+                    <img class="img-fluid w-100" src="./../collect/spain/ES-262375.jpg" alt="Postcard ES-262375">
+                    <div class="bottom-left">ES-262375</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/spain/ES-309948.jpg" data-caption="Postcard ES-309948">
+                    <img class="img-fluid w-100" src="./../collect/spain/ES-309948.jpg" alt="Postcard ES-309948">
+                    <div class="bottom-left">ES-309948</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/spain/ES-352515.jpg" data-caption="Postcard ES-352515">
+                    <img class="img-fluid w-100" src="./../collect/spain/ES-352515.jpg" alt="Postcard ES-352515">
+                    <div class="bottom-left">ES-352515</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/spain/ES-370727.jpg" data-caption="Postcard ES-370727">
+                    <img class="img-fluid w-100" src="./../collect/spain/ES-370727.jpg" alt="Postcard ES-370727">
+                    <div class="bottom-left">ES-370727</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/spain/ES-412110.jpg" data-caption="Postcard ES-412110">
+                    <img class="img-fluid w-100" src="./../collect/spain/ES-412110.jpg" alt="Postcard ES-412110">
+                    <div class="bottom-left">ES-412110</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/spain/ES-423338.jpg" data-caption="Postcard ES-423338">
+                    <img class="img-fluid w-100" src="./../collect/spain/ES-423338.jpg" alt="Postcard ES-423338">
+                    <div class="bottom-left">ES-423338</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/spain/ES-487605.jpg" data-caption="Postcard ES-487605">
+                    <img class="img-fluid w-100" src="./../collect/spain/ES-487605.jpg" alt="Postcard ES-487605">
+                    <div class="bottom-left">ES-487605</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/spain/ES-518100.jpg" data-caption="Postcard ES-518100">
+                    <img class="img-fluid w-100" src="./../collect/spain/ES-518100.jpg" alt="Postcard ES-518100">
+                    <div class="bottom-left">ES-518100</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/spain/ES-518835.jpg" data-caption="Postcard ES-518835">
+                    <img class="img-fluid w-100" src="./../collect/spain/ES-518835.jpg" alt="Postcard ES-518835">
+                    <div class="bottom-left">ES-518835</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/spain/ES-534844.jpg" data-caption="Postcard ES-534844">
+                    <img class="img-fluid w-100" src="./../collect/spain/ES-534844.jpg" alt="Postcard ES-534844">
+                    <div class="bottom-left">ES-534844</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/spain/ES-534963.jpg" data-caption="Postcard ES-534963">
+                    <img class="img-fluid w-100" src="./../collect/spain/ES-534963.jpg" alt="Postcard ES-534963">
+                    <div class="bottom-left">ES-534963</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/spain/ES-536495.jpg" data-caption="Postcard ES-536495">
+                    <img class="img-fluid w-100" src="./../collect/spain/ES-536495.jpg" alt="Postcard ES-536495">
+                    <div class="bottom-left">ES-536495</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/spain/ES-537351.jpg" data-caption="Postcard ES-537351">
+                    <img class="img-fluid w-100" src="./../collect/spain/ES-537351.jpg" alt="Postcard ES-537351">
+                    <div class="bottom-left">ES-537351</div>
                 </a>
             </div>
         </div>
         <nav style="padding-left: 10px; padding-top: 10px;">
           <ul class="pagination">
-             <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
-         </ul>
-        </nav>
-    </div>
+           <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
+       </ul>
+   </nav>
+</div>
 </div>
 </div>
 
