--- a/country/Sweden.html
+++ b/country/Sweden.html
@@ -13,7 +13,7 @@
     <link href="./../fancybox/jquery.fancybox.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="./../css/post.css">
-    <title>Alexei's Postcrads - Iceland</title>
+    <title>Alexei's Postcrads - Sweden</title>
 
 
 </head>
@@ -107,33 +107,51 @@
             </nav>
         </div>
         <div class="col-md-9 col-lg-10 content-container">
-           <h1>Iceland</h1>
+           <h1>Sweden</h1>
            <div class="row">
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/iceland/IS-18858.jpg" data-caption="Postcard IS-18858">
-                    <img class="img-fluid w-100" src="./../collect/iceland/IS-18858.jpg" alt="Postcard IS-18858">
-                    <div class="bottom-left">IS-18858</div>
+                <a data-fancybox="gallery" href="./../collect/sweden/SE-84849.jpg" data-caption="Postcard SE-84849">
+                    <img class="img-fluid w-100" src="./../collect/sweden/SE-84849.jpg" alt="Postcard SE-84849">
+                    <div class="bottom-left">SE-84849</div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/iceland/IS-22002.jpg" data-caption="Postcard IS-22002">
-                    <img class="img-fluid w-100" src="./../collect/iceland/IS-22002.jpg" alt="Postcard IS-22002">
-                    <div class="bottom-left">IS-22002</div>
+                <a data-fancybox="gallery" href="./../collect/sweden/SE-109832.jpg" data-caption="Postcard SE-109832">
+                    <img class="img-fluid w-100" src="./../collect/sweden/SE-109832.jpg" alt="Postcard SE-109832">
+                    <div class="bottom-left">SE-109832</div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/iceland/IS-23810.jpg" data-caption="Postcard IS-23810">
-                    <img class="img-fluid w-100" src="./../collect/iceland/IS-23810.jpg" alt="Postcard IS-23810">
-                    <div class="bottom-left">IS-23810</div>
+                <a data-fancybox="gallery" href="./../collect/sweden/SE-116358.jpg" data-caption="Postcard SE-116358">
+                    <img class="img-fluid w-100" src="./../collect/sweden/SE-116358.jpg" alt="Postcard SE-116358">
+                    <div class="bottom-left">SE-116358</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/sweden/SE-116456.jpg" data-caption="Postcard SE-116456">
+                    <img class="img-fluid w-100" src="./../collect/sweden/SE-116456.jpg" alt="Postcard SE-116456">
+                    <div class="bottom-left">SE-116456</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/sweden/SE-144119.jpg" data-caption="Postcard SE-144119">
+                    <img class="img-fluid w-100" src="./../collect/sweden/SE-144119.jpg" alt="Postcard SE-144119">
+                    <div class="bottom-left">SE-144119</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/sweden/SE-159895.jpg" data-caption="Postcard SE-159895">
+                    <img class="img-fluid w-100" src="./../collect/sweden/SE-159895.jpg" alt="Postcard SE-159895">
+                    <div class="bottom-left">SE-159895</div>
                 </a>
             </div>
         </div>
         <nav style="padding-left: 10px; padding-top: 10px;">
           <ul class="pagination">
-             <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
-         </ul>
-        </nav>
-    </div>
+           <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
+       </ul>
+   </nav>
+</div>
 </div>
 </div>
 
