--- a/country/Switzerland.html
+++ b/country/Switzerland.html
@@ -13,7 +13,7 @@
     <link href="./../fancybox/jquery.fancybox.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="./../css/post.css">
-    <title>Alexei's Postcrads - Iceland</title>
+    <title>Alexei's Postcrads - Switzerland</title>
 
 
 </head>
@@ -107,33 +107,100 @@
             </nav>
         </div>
         <div class="col-md-9 col-lg-10 content-container">
-           <h1>Iceland</h1>
+           <h1>Switzerland</h1>
            <div class="row">
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/iceland/IS-18858.jpg" data-caption="Postcard IS-18858">
-                    <img class="img-fluid w-100" src="./../collect/iceland/IS-18858.jpg" alt="Postcard IS-18858">
-                    <div class="bottom-left">IS-18858</div>
+                <a data-fancybox="gallery" href="./../collect/switzerland/CH-81237.jpg" data-caption="Postcard CH-81237">
+                    <img class="img-fluid w-100" src="./../collect/switzerland/CH-81237.jpg" alt="Postcard CH-81237">
+                    <div class="bottom-left">CH-81237</div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/iceland/IS-22002.jpg" data-caption="Postcard IS-22002">
-                    <img class="img-fluid w-100" src="./../collect/iceland/IS-22002.jpg" alt="Postcard IS-22002">
-                    <div class="bottom-left">IS-22002</div>
+                <a data-fancybox="gallery" href="./../collect/switzerland/CH-84634.jpg" data-caption="Postcard CH-84634">
+                    <img class="img-fluid w-100" src="./../collect/switzerland/CH-84634.jpg" alt="Postcard CH-84634">
+                    <div class="bottom-left">CH-84634</div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/iceland/IS-23810.jpg" data-caption="Postcard IS-23810">
-                    <img class="img-fluid w-100" src="./../collect/iceland/IS-23810.jpg" alt="Postcard IS-23810">
-                    <div class="bottom-left">IS-23810</div>
+                <a data-fancybox="gallery" href="./../collect/switzerland/CH-251149.jpg" data-caption="Postcard CH-251149">
+                    <img class="img-fluid w-100" src="./../collect/switzerland/CH-251149.jpg" alt="Postcard CH-251149">
+                    <div class="bottom-left">CH-251149</div>
                 </a>
             </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/switzerland/CH-269942.jpg" data-caption="Postcard CH-269942">
+                    <img class="img-fluid w-100" src="./../collect/switzerland/CH-269942.jpg" alt="Postcard CH-269942">
+                    <div class="bottom-left">CH-269942</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/switzerland/CH-272951.jpg" data-caption="Postcard CH-272951">
+                    <img class="img-fluid w-100" src="./../collect/switzerland/CH-272951.jpg" alt="Postcard CH-272951">
+                    <div class="bottom-left">CH-272951</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/switzerland/CH-302831.jpg" data-caption="Postcard CH-302831">
+                    <img class="img-fluid w-100" src="./../collect/switzerland/CH-302831.jpg" alt="Postcard CH-302831">
+                    <div class="bottom-left">CH-302831</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/switzerland/CH-328146.jpg" data-caption="Postcard CH-328146">
+                    <img class="img-fluid w-100" src="./../collect/switzerland/CH-328146.jpg" alt="Postcard CH-328146">
+                    <div class="bottom-left">CH-328146</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/switzerland/CH-336451.jpg" data-caption="Postcard CH-336451">
+                    <img class="img-fluid w-100" src="./../collect/switzerland/CH-336451.jpg" alt="Postcard CH-336451">
+                    <div class="bottom-left">CH-336451</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/switzerland/CH-345167.jpg" data-caption="Postcard CH-345167">
+                    <img class="img-fluid w-100" src="./../collect/switzerland/CH-345167.jpg" alt="Postcard CH-345167">
+                    <div class="bottom-left">CH-345167</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/switzerland/CH-361922.jpg" data-caption="Postcard CH-361922">
+                    <img class="img-fluid w-100" src="./../collect/switzerland/CH-361922.jpg" alt="Postcard CH-361922">
+                    <div class="bottom-left">CH-361922</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/switzerland/CH-365223.jpg" data-caption="Postcard CH-365223">
+                    <img class="img-fluid w-100" src="./../collect/switzerland/CH-365223.jpg" alt="Postcard CH-365223">
+                    <div class="bottom-left">CH-365223</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/switzerland/CH-380673.jpg" data-caption="Postcard CH-380673">
+                    <img class="img-fluid w-100" src="./../collect/switzerland/CH-380673.jpg" alt="Postcard CH-380673">
+                    <div class="bottom-left">CH-380673</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/switzerland/CH-380678.jpg" data-caption="Postcard CH-380678">
+                    <img class="img-fluid w-100" src="./../collect/switzerland/CH-380678.jpg" alt="Postcard CH-380678">
+                    <div class="bottom-left">CH-380678</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/switzerland/CH-403253.jpg" data-caption="Postcard CH-403253">
+                    <img class="img-fluid w-100" src="./../collect/switzerland/CH-403253.jpg" alt="Postcard CH-403253">
+                    <div class="bottom-left">CH-403253</div>
+                </a>
+            </div>
+
         </div>
         <nav style="padding-left: 10px; padding-top: 10px;">
           <ul class="pagination">
-             <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
-         </ul>
-        </nav>
-    </div>
+           <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
+       </ul>
+   </nav>
+</div>
 </div>
 </div>
 
