--- a/country/Hong_Kong-2.html
+++ b/country/Hong_Kong-2.html
@@ -13,7 +13,7 @@
     <link href="./../fancybox/jquery.fancybox.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="./../css/post.css">
-    <title>Alexei's Postcrads - Iceland</title>
+    <title>Alexei's Postcrads - Hong Kong</title>
 
 
 </head>
@@ -107,31 +107,92 @@
             </nav>
         </div>
         <div class="col-md-9 col-lg-10 content-container">
-           <h1>Iceland</h1>
+           <h1>Hong Kong</h1>
            <div class="row">
+            
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/iceland/IS-18858.jpg" data-caption="Postcard IS-18858">
-                    <img class="img-fluid w-100" src="./../collect/iceland/IS-18858.jpg" alt="Postcard IS-18858">
-                    <div class="bottom-left">IS-18858</div>
+                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-329880.jpg" data-caption="Postcard HK-329880">
+                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-329880.jpg" alt="Postcard HK-329880">
+                    <div class="bottom-left">HK-329880</div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/iceland/IS-22002.jpg" data-caption="Postcard IS-22002">
-                    <img class="img-fluid w-100" src="./../collect/iceland/IS-22002.jpg" alt="Postcard IS-22002">
-                    <div class="bottom-left">IS-22002</div>
+                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-359303.jpg" data-caption="Postcard HK-359303">
+                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-359303.jpg" alt="Postcard HK-359303">
+                    <div class="bottom-left">HK-359303</div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/iceland/IS-23810.jpg" data-caption="Postcard IS-23810">
-                    <img class="img-fluid w-100" src="./../collect/iceland/IS-23810.jpg" alt="Postcard IS-23810">
-                    <div class="bottom-left">IS-23810</div>
+                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-398277.jpg" data-caption="Postcard HK-398277">
+                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-398277.jpg" alt="Postcard HK-398277">
+                    <div class="bottom-left">HK-398277</div>
                 </a>
             </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-449435.jpg" data-caption="Postcard HK-449435">
+                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-449435.jpg" alt="Postcard HK-449435">
+                    <div class="bottom-left">HK-449435</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-479771.jpg" data-caption="Postcard HK-479771">
+                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-479771.jpg" alt="Postcard HK-479771">
+                    <div class="bottom-left">HK-479771</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-482913.jpg" data-caption="Postcard HK-482913">
+                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-482913.jpg" alt="Postcard HK-482913">
+                    <div class="bottom-left">HK-482913</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-511555.jpg" data-caption="Postcard HK-511555">
+                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-511555.jpg" alt="Postcard HK-511555">
+                    <div class="bottom-left">HK-511555</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-512398.jpg" data-caption="Postcard HK-512398">
+                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-512398.jpg" alt="Postcard HK-512398">
+                    <div class="bottom-left">HK-512398</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-515327.jpg" data-caption="Postcard HK-515327">
+                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-515327.jpg" alt="Postcard HK-515327">
+                    <div class="bottom-left">HK-515327</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-516971.jpg" data-caption="Postcard HK-516971">
+                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-516971.jpg" alt="Postcard HK-516971">
+                    <div class="bottom-left">HK-516971</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-517108.jpg" data-caption="Postcard HK-517108">
+                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-517108.jpg" alt="Postcard HK-517108">
+                    <div class="bottom-left">HK-517108</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-517235.jpg" data-caption="Postcard HK-517235">
+                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-517235.jpg" alt="Postcard HK-517235">
+                    <div class="bottom-left">HK-517235</div>
+                </a>
+            </div>
+            
         </div>
         <nav style="padding-left: 10px; padding-top: 10px;">
           <ul class="pagination">
-             <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
-         </ul>
+            <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
+            <li class="page-item"><a class="page-link" href="./Hong_Kong.html">Previous</a></li>
+            <li class="page-item"><a class="page-link" href="./Hong_Kong.html">1</a></li>
+            <li class="page-item"><a class="page-link" href="./Hong_Kong-2.html"><b>2</b></a></li>
+            <li class="page-item"><a class="page-link" href="./Hong_Kong-3.html">3</a></li>
+            <li class="page-item"><a class="page-link" href="./Hong_Kong-3.html">Next</a></li>
+          </ul>
         </nav>
     </div>
 </div>
