--- a/country/Hong_Kong.html
+++ b/country/Hong_Kong.html
@@ -90,7 +90,7 @@
                         <li class="nav-item"><a class="nav-link-cut" href="./Serbia.html"><img src="./../flag/rs.png" alt="Serbia">Serbia</a></li>
                         <li class="nav-item"><a class="nav-link-cut" href="./Singapore.html"><img src="./../flag/sg.png" alt="Singapore">Singapore</a></li>
                         <li class="nav-item"><a class="nav-link-cut" href="./Slovakia.html"><img src="./../flag/sk.png" alt="Slovakia">Slovakia</a></li>
-                        <li class="nav-item"><a class="nav-link-cut" href="./Slovenia.html"><img src="./../flag/sl.png" alt="Slovenia">Slovenia</a></li>
+                        <li class="nav-item"><a class="nav-link-cut" href="./Slovenia.html"><img src="./../flag/si.png" alt="Slovenia">Slovenia</a></li>
                         <li class="nav-item"><a class="nav-link-cut" href="./South_Africa.html"><img src="./../flag/za.png" alt="South Africa">South Africa</a></li>
                         <li class="nav-item"><a class="nav-link-cut" href="./Spain.html"><img src="./../flag/es.png" alt="Spain">Spain</a></li>
                         <li class="nav-item"><a class="nav-link-cut" href="./Sweden.html"><img src="./../flag/se.png" alt="Sweden">Sweden</a></li>
@@ -181,103 +181,17 @@
                     <div class="bottom-left">HK-320085</div>
                 </a>
             </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-329880.jpg" data-caption="Postcard HK-329880">
-                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-329880.jpg" alt="Postcard HK-329880">
-                    <div class="bottom-left">HK-329880</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-359303.jpg" data-caption="Postcard HK-359303">
-                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-359303.jpg" alt="Postcard HK-359303">
-                    <div class="bottom-left">HK-359303</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-398277.jpg" data-caption="Postcard HK-398277">
-                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-398277.jpg" alt="Postcard HK-398277">
-                    <div class="bottom-left">HK-398277</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-449435.jpg" data-caption="Postcard HK-449435">
-                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-449435.jpg" alt="Postcard HK-449435">
-                    <div class="bottom-left">HK-449435</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-479771.jpg" data-caption="Postcard HK-479771">
-                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-479771.jpg" alt="Postcard HK-479771">
-                    <div class="bottom-left">HK-479771</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-482913.jpg" data-caption="Postcard HK-482913">
-                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-482913.jpg" alt="Postcard HK-482913">
-                    <div class="bottom-left">HK-482913</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-511555.jpg" data-caption="Postcard HK-511555">
-                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-511555.jpg" alt="Postcard HK-511555">
-                    <div class="bottom-left">HK-511555</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-512398.jpg" data-caption="Postcard HK-512398">
-                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-512398.jpg" alt="Postcard HK-512398">
-                    <div class="bottom-left">HK-512398</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-515327.jpg" data-caption="Postcard HK-515327">
-                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-515327.jpg" alt="Postcard HK-515327">
-                    <div class="bottom-left">HK-515327</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-516971.jpg" data-caption="Postcard HK-516971">
-                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-516971.jpg" alt="Postcard HK-516971">
-                    <div class="bottom-left">HK-516971</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-517108.jpg" data-caption="Postcard HK-517108">
-                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-517108.jpg" alt="Postcard HK-517108">
-                    <div class="bottom-left">HK-517108</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-517235.jpg" data-caption="Postcard HK-517235">
-                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-517235.jpg" alt="Postcard HK-517235">
-                    <div class="bottom-left">HK-517235</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-543119.jpg" data-caption="Postcard HK-543119">
-                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-543119.jpg" alt="Postcard HK-543119">
-                    <div class="bottom-left">HK-543119</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-558903.jpg" data-caption="Postcard HK-558903">
-                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-558903.jpg" alt="Postcard HK-558903">
-                    <div class="bottom-left">HK-558903</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-615435.jpg" data-caption="Postcard HK-615435">
-                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-615435.jpg" alt="Postcard HK-615435">
-                    <div class="bottom-left">HK-615435</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/hong_kong/HK-624406.jpg" data-caption="Postcard HK-624406">
-                    <img class="img-fluid w-100" src="./../collect/hong_kong/HK-624406.jpg" alt="Postcard HK-624406">
-                    <div class="bottom-left">HK-624406</div>
-                </a>
-            </div>
+            
         </div>
+        <nav style="padding-left: 10px; padding-top: 10px;">
+          <ul class="pagination">
+            <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
+            <li class="page-item"><a class="page-link" href="./Hong_Kong.html"><b>1</b></a></li>
+            <li class="page-item"><a class="page-link" href="./Hong_Kong-2.html">2</a></li>
+            <li class="page-item"><a class="page-link" href="./Hong_Kong-3.html">3</a></li>
+            <li class="page-item"><a class="page-link" href="./Hong_Kong-2.html">Next</a></li>
+          </ul>
+        </nav>
     </div>
 </div>
 </div>
