--- a/country/India.html
+++ b/country/India.html
@@ -90,7 +90,7 @@
                         <li class="nav-item"><a class="nav-link-cut" href="./Serbia.html"><img src="./../flag/rs.png" alt="Serbia">Serbia</a></li>
                         <li class="nav-item"><a class="nav-link-cut" href="./Singapore.html"><img src="./../flag/sg.png" alt="Singapore">Singapore</a></li>
                         <li class="nav-item"><a class="nav-link-cut" href="./Slovakia.html"><img src="./../flag/sk.png" alt="Slovakia">Slovakia</a></li>
-                        <li class="nav-item"><a class="nav-link-cut" href="./Slovenia.html"><img src="./../flag/sl.png" alt="Slovenia">Slovenia</a></li>
+                        <li class="nav-item"><a class="nav-link-cut" href="./Slovenia.html"><img src="./../flag/si.png" alt="Slovenia">Slovenia</a></li>
                         <li class="nav-item"><a class="nav-link-cut" href="./South_Africa.html"><img src="./../flag/za.png" alt="South Africa">South Africa</a></li>
                         <li class="nav-item"><a class="nav-link-cut" href="./Spain.html"><img src="./../flag/es.png" alt="Spain">Spain</a></li>
                         <li class="nav-item"><a class="nav-link-cut" href="./Sweden.html"><img src="./../flag/se.png" alt="Sweden">Sweden</a></li>
@@ -181,43 +181,16 @@
                     <div class="bottom-left">IN-204809</div>
                 </a>
             </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/india/IN-247068.jpg" data-caption="Postcard IN-247068">
-                    <img class="img-fluid w-100" src="./../collect/india/IN-247068.jpg" alt="Postcard IN-247068">
-                    <div class="bottom-left">IN-247068</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/india/IN-257134.jpg" data-caption="Postcard IN-257134">
-                    <img class="img-fluid w-100" src="./../collect/india/IN-257134.jpg" alt="Postcard IN-257134">
-                    <div class="bottom-left">IN-257134</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/india/IN-260925.jpg" data-caption="Postcard IN-260925">
-                    <img class="img-fluid w-100" src="./../collect/india/IN-260925.jpg" alt="Postcard IN-260925">
-                    <div class="bottom-left">IN-260925</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/india/IN-295723.jpg" data-caption="Postcard IN-295723">
-                    <img class="img-fluid w-100" src="./../collect/india/IN-295723.jpg" alt="Postcard IN-295723">
-                    <div class="bottom-left">IN-295723</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/india/IN-299499.jpg" data-caption="Postcard IN-299499">
-                    <img class="img-fluid w-100" src="./../collect/india/IN-299499.jpg" alt="Postcard IN-299499">
-                    <div class="bottom-left">IN-299499</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/india/IN-322402.jpg" data-caption="Postcard IN-322402">
-                    <img class="img-fluid w-100" src="./../collect/india/IN-322402.jpg" alt="Postcard IN-322402">
-                    <div class="bottom-left">IN-322402</div>
-                </a>
-            </div>
+            
         </div>
+        <nav style="padding-left: 10px; padding-top: 10px;">
+          <ul class="pagination">
+            <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
+            <li class="page-item"><a class="page-link" href="./India.html"><b>1</b></a></li>
+            <li class="page-item"><a class="page-link" href="./India-2.html">2</a></li>
+            <li class="page-item"><a class="page-link" href="./India-2.html">Next</a></li>
+          </ul>
+        </nav>
     </div>
 </div>
 </div>
