--- a/country/Ireland.html
+++ b/country/Ireland.html
@@ -90,7 +90,7 @@
                         <li class="nav-item"><a class="nav-link-cut" href="./Serbia.html"><img src="./../flag/rs.png" alt="Serbia">Serbia</a></li>
                         <li class="nav-item"><a class="nav-link-cut" href="./Singapore.html"><img src="./../flag/sg.png" alt="Singapore">Singapore</a></li>
                         <li class="nav-item"><a class="nav-link-cut" href="./Slovakia.html"><img src="./../flag/sk.png" alt="Slovakia">Slovakia</a></li>
-                        <li class="nav-item"><a class="nav-link-cut" href="./Slovenia.html"><img src="./../flag/sl.png" alt="Slovenia">Slovenia</a></li>
+                        <li class="nav-item"><a class="nav-link-cut" href="./Slovenia.html"><img src="./../flag/si.png" alt="Slovenia">Slovenia</a></li>
                         <li class="nav-item"><a class="nav-link-cut" href="./South_Africa.html"><img src="./../flag/za.png" alt="South Africa">South Africa</a></li>
                         <li class="nav-item"><a class="nav-link-cut" href="./Spain.html"><img src="./../flag/es.png" alt="Spain">Spain</a></li>
                         <li class="nav-item"><a class="nav-link-cut" href="./Sweden.html"><img src="./../flag/se.png" alt="Sweden">Sweden</a></li>
