--- a/country/Italy-2.html
+++ b/country/Italy-2.html
@@ -13,7 +13,7 @@
     <link href="./../fancybox/jquery.fancybox.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="./../css/post.css">
-    <title>Alexei's Postcrads - Iceland</title>
+    <title>Alexei's Postcrads - Italy</title>
 
 
 </head>
@@ -107,33 +107,42 @@
             </nav>
         </div>
         <div class="col-md-9 col-lg-10 content-container">
-           <h1>Iceland</h1>
-           <div class="row">
+         <h1>Italy</h1>
+         <div class="row">
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/iceland/IS-18858.jpg" data-caption="Postcard IS-18858">
-                    <img class="img-fluid w-100" src="./../collect/iceland/IS-18858.jpg" alt="Postcard IS-18858">
-                    <div class="bottom-left">IS-18858</div>
+                <a data-fancybox="gallery" href="./../collect/italy/IT-444318.jpg" data-caption="Postcard IT-444318">
+                    <img class="img-fluid w-100" src="./../collect/italy/IT-444318.jpg" alt="Postcard IT-444318">
+                    <div class="bottom-left">IT-444318</div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/iceland/IS-22002.jpg" data-caption="Postcard IS-22002">
-                    <img class="img-fluid w-100" src="./../collect/iceland/IS-22002.jpg" alt="Postcard IS-22002">
-                    <div class="bottom-left">IS-22002</div>
+                <a data-fancybox="gallery" href="./../collect/italy/IT-444321.jpg" data-caption="Postcard IT-444321">
+                    <img class="img-fluid w-100" src="./../collect/italy/IT-444321.jpg" alt="Postcard IT-444321">
+                    <div class="bottom-left">IT-444321</div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/iceland/IS-23810.jpg" data-caption="Postcard IS-23810">
-                    <img class="img-fluid w-100" src="./../collect/iceland/IS-23810.jpg" alt="Postcard IS-23810">
-                    <div class="bottom-left">IS-23810</div>
+                <a data-fancybox="gallery" href="./../collect/italy/IT-460164.jpg" data-caption="Postcard IT-460164">
+                    <img class="img-fluid w-100" src="./../collect/italy/IT-460164.jpg" alt="Postcard IT-460164">
+                    <div class="bottom-left">IT-460164</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/italy/IT-509804.jpg" data-caption="Postcard IT-509804">
+                    <img class="img-fluid w-100" src="./../collect/italy/IT-509804.jpg" alt="Postcard IT-509804">
+                    <div class="bottom-left">IT-509804</div>
                 </a>
             </div>
         </div>
         <nav style="padding-left: 10px; padding-top: 10px;">
           <ul class="pagination">
-             <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
-         </ul>
+            <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
+            <li class="page-item"><a class="page-link" href="./Italy.html">Previous</a></li>
+            <li class="page-item"><a class="page-link" href="./Italy.html">1</a></li>
+            <li class="page-item"><a class="page-link" href="./Italy-2.html"><b>2</b></a></li>
+          </ul>
         </nav>
-    </div>
+ </div>
 </div>
 </div>
 
