--- a/country/Italy.html
+++ b/country/Italy.html
@@ -90,7 +90,7 @@
                         <li class="nav-item"><a class="nav-link-cut" href="./Serbia.html"><img src="./../flag/rs.png" alt="Serbia">Serbia</a></li>
                         <li class="nav-item"><a class="nav-link-cut" href="./Singapore.html"><img src="./../flag/sg.png" alt="Singapore">Singapore</a></li>
                         <li class="nav-item"><a class="nav-link-cut" href="./Slovakia.html"><img src="./../flag/sk.png" alt="Slovakia">Slovakia</a></li>
-                        <li class="nav-item"><a class="nav-link-cut" href="./Slovenia.html"><img src="./../flag/sl.png" alt="Slovenia">Slovenia</a></li>
+                        <li class="nav-item"><a class="nav-link-cut" href="./Slovenia.html"><img src="./../flag/si.png" alt="Slovenia">Slovenia</a></li>
                         <li class="nav-item"><a class="nav-link-cut" href="./South_Africa.html"><img src="./../flag/za.png" alt="South Africa">South Africa</a></li>
                         <li class="nav-item"><a class="nav-link-cut" href="./Spain.html"><img src="./../flag/es.png" alt="Spain">Spain</a></li>
                         <li class="nav-item"><a class="nav-link-cut" href="./Sweden.html"><img src="./../flag/se.png" alt="Sweden">Sweden</a></li>
@@ -181,36 +181,15 @@
                     <div class="bottom-left">IT-440222</div>
                 </a>
             </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/italy/IT-444318.jpg" data-caption="Postcard IT-444318">
-                    <img class="img-fluid w-100" src="./../collect/italy/IT-444318.jpg" alt="Postcard IT-444318">
-                    <div class="bottom-left">IT-444318</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/italy/IT-444321.jpg" data-caption="Postcard IT-444321">
-                    <img class="img-fluid w-100" src="./../collect/italy/IT-444321.jpg" alt="Postcard IT-444321">
-                    <div class="bottom-left">IT-444321</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/italy/IT-460164.jpg" data-caption="Postcard IT-460164">
-                    <img class="img-fluid w-100" src="./../collect/italy/IT-460164.jpg" alt="Postcard IT-460164">
-                    <div class="bottom-left">IT-460164</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/italy/IT-509804.jpg" data-caption="Postcard IT-509804">
-                    <img class="img-fluid w-100" src="./../collect/italy/IT-509804.jpg" alt="Postcard IT-509804">
-                    <div class="bottom-left">IT-509804</div>
-                </a>
-            </div>
         </div>
         <nav style="padding-left: 10px; padding-top: 10px;">
           <ul class="pagination">
-             <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
-         </ul>
-     </nav>
+            <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
+            <li class="page-item"><a class="page-link" href="./Italy.html"><b>1</b></a></li>
+            <li class="page-item"><a class="page-link" href="./Italy-2.html">2</a></li>
+            <li class="page-item"><a class="page-link" href="./Italy-2.html">Next</a></li>
+          </ul>
+        </nav>
  </div>
 </div>
 </div>
