--- a/country/New_Zealand.html
+++ b/country/New_Zealand.html
@@ -13,7 +13,7 @@
     <link href="./../fancybox/jquery.fancybox.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="./../css/post.css">
-    <title>Alexei's Postcrads - Iceland</title>
+    <title>Alexei's Postcrads - New Zealand</title>
 
 
 </head>
@@ -107,24 +107,30 @@
             </nav>
         </div>
         <div class="col-md-9 col-lg-10 content-container">
-           <h1>Iceland</h1>
-           <div class="row">
+         <h1>New Zealand</h1>
+         <div class="row">
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/iceland/IS-18858.jpg" data-caption="Postcard IS-18858">
-                    <img class="img-fluid w-100" src="./../collect/iceland/IS-18858.jpg" alt="Postcard IS-18858">
-                    <div class="bottom-left">IS-18858</div>
+                <a data-fancybox="gallery" href="./../collect/new_zealand/NZ-131353.jpg" data-caption="Postcard NZ-131353">
+                    <img class="img-fluid w-100" src="./../collect/new_zealand/NZ-131353.jpg" alt="Postcard NZ-131353">
+                    <div class="bottom-left">NZ-131353</div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/iceland/IS-22002.jpg" data-caption="Postcard IS-22002">
-                    <img class="img-fluid w-100" src="./../collect/iceland/IS-22002.jpg" alt="Postcard IS-22002">
-                    <div class="bottom-left">IS-22002</div>
+                <a data-fancybox="gallery" href="./../collect/new_zealand/NZ-139999.jpg" data-caption="Postcard NZ-139999">
+                    <img class="img-fluid w-100" src="./../collect/new_zealand/NZ-139999.jpg" alt="Postcard NZ-139999">
+                    <div class="bottom-left">NZ-139999</div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/iceland/IS-23810.jpg" data-caption="Postcard IS-23810">
-                    <img class="img-fluid w-100" src="./../collect/iceland/IS-23810.jpg" alt="Postcard IS-23810">
-                    <div class="bottom-left">IS-23810</div>
+                <a data-fancybox="gallery" href="./../collect/new_zealand/NZ-141211.jpg" data-caption="Postcard NZ-141211">
+                    <img class="img-fluid w-100" src="./../collect/new_zealand/NZ-141211.jpg" alt="Postcard NZ-141211">
+                    <div class="bottom-left">NZ-141211</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/new_zealand/NZ-157121.jpg" data-caption="Postcard NZ-157121">
+                    <img class="img-fluid w-100" src="./../collect/new_zealand/NZ-157121.jpg" alt="Postcard NZ-157121">
+                    <div class="bottom-left">NZ-157121</div>
                 </a>
             </div>
         </div>
@@ -132,8 +138,8 @@
           <ul class="pagination">
              <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
          </ul>
-        </nav>
-    </div>
+     </nav>
+ </div>
 </div>
 </div>
 
