--- a/country/Slovenia.html
+++ b/country/Slovenia.html
@@ -13,7 +13,7 @@
     <link href="./../fancybox/jquery.fancybox.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="./../css/post.css">
-    <title>Alexei's Postcrads - Iceland</title>
+    <title>Alexei's Postcrads - Slovenia</title>
 
 
 </head>
@@ -107,33 +107,45 @@
             </nav>
         </div>
         <div class="col-md-9 col-lg-10 content-container">
-           <h1>Iceland</h1>
+           <h1>Slovenia</h1>
            <div class="row">
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/iceland/IS-18858.jpg" data-caption="Postcard IS-18858">
-                    <img class="img-fluid w-100" src="./../collect/iceland/IS-18858.jpg" alt="Postcard IS-18858">
-                    <div class="bottom-left">IS-18858</div>
+                <a data-fancybox="gallery" href="./../collect/slovenia/SI-95969.jpg" data-caption="Postcard SI-95969">
+                    <img class="img-fluid w-100" src="./../collect/slovenia/SI-95969.jpg" alt="Postcard SI-95969">
+                    <div class="bottom-left">SI-95969</div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/iceland/IS-22002.jpg" data-caption="Postcard IS-22002">
-                    <img class="img-fluid w-100" src="./../collect/iceland/IS-22002.jpg" alt="Postcard IS-22002">
-                    <div class="bottom-left">IS-22002</div>
+                <a data-fancybox="gallery" href="./../collect/slovenia/SI-129531.jpg" data-caption="Postcard SI-129531">
+                    <img class="img-fluid w-100" src="./../collect/slovenia/SI-129531.jpg" alt="Postcard SI-129531">
+                    <div class="bottom-left">SI-129531</div>
                 </a>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/iceland/IS-23810.jpg" data-caption="Postcard IS-23810">
-                    <img class="img-fluid w-100" src="./../collect/iceland/IS-23810.jpg" alt="Postcard IS-23810">
-                    <div class="bottom-left">IS-23810</div>
+                <a data-fancybox="gallery" href="./../collect/slovenia/SI-134732.jpg" data-caption="Postcard SI-134732">
+                    <img class="img-fluid w-100" src="./../collect/slovenia/SI-134732.jpg" alt="Postcard SI-134732">
+                    <div class="bottom-left">SI-134732</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/slovenia/SI-167026.jpg" data-caption="Postcard SI-167026">
+                    <img class="img-fluid w-100" src="./../collect/slovenia/SI-167026.jpg" alt="Postcard SI-167026">
+                    <div class="bottom-left">SI-167026</div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                <a data-fancybox="gallery" href="./../collect/slovenia/SI-178210.jpg" data-caption="Postcard SI-178210">
+                    <img class="img-fluid w-100" src="./../collect/slovenia/SI-178210.jpg" alt="Postcard SI-178210">
+                    <div class="bottom-left">SI-178210</div>
                 </a>
             </div>
         </div>
         <nav style="padding-left: 10px; padding-top: 10px;">
           <ul class="pagination">
-             <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
-         </ul>
-        </nav>
-    </div>
+           <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
+       </ul>
+   </nav>
+</div>
 </div>
 </div>
 
